# surfaco

./: .gitignore  Cargo.toml  README.md  run.sh
assets/: default.rhai
dynamic/: Cargo.toml
dynamic/src/: lib.rs
src/: main.rs
src/engine/: camera.rs  canvas.rs  mesh.rs  mesh.wgsl  mod.rs  quad.wgsl  surface.rs
