[package]
name = "dynamic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["dylib"]

[dependencies]
bytemuck = { version = "1.13.0", features = ["derive"] }
futures = { version = "0.3.25", features = ["executor"] }
glam = { version = "0.22.0", features = ["bytemuck"] }
wgpu = "0.15.0"
winit = "0.27.5"
itertools = "0.10.5"
num-complex = "0.4.3"
rhai = { version = "1.12.0", features = ["f32_float", "internals"] }